@@ -275,6 +275,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   'waiting_advices' states and to specify origin and back states
 - It is now possible to register several 'meetingadvice' portal_types so we may use different workflows or define additional fields.
   Added constant EXTRA_ADVICE_SUFFIXES to config.py to define extra suffixes to use for groups giving advice using a custom workflow
+- Meeting and MeetingItem WorkflowCondition 'mayCorrect' now receive an extra parameter 'destinationState' that is useful
+  when a state has several 'back' transitions to know which transition we are working on
 
 3.3 (2015-02-27)
 ----------------
